Update server code with latest changes 03/02/2026